--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
             }
         }
 
-        console.log(getComputerChoice());
+        function getHumanChoice() {
+            let humanChoice = prompt("Pick a choice from: rock, paper, scissors")
+            if (humanChoice === "rock"
+                || humanChoice === "paper"
+                || humanChoice === "scissors") {
+                return humanChoice;
+            } else {
+                return "Enter a valid option"
+            }
+        }
+
+        console.log(getHumanChoice());
     </script>
 
 </body>
