Declare the players initial score

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             }
         }
 
+        let humanScore = 0;
+        let computerScore = 0;
+
         console.log(getHumanChoice());
     </script>
 
