--- a/index.html
+++ b/index.html
@@ -34,32 +34,48 @@
             }
         }
 
-        let humanScore = 0;
-        let computerScore = 0;
 
-        // console.log(getHumanChoice());
+        function playGame() {
+            let humanScore = 0;
+            let computerScore = 0;
 
-        function playRound(humanChoice, computerChoice) {
-            let resultMessage = "";
+            function playRound() {
+                const humanSelection = getHumanChoice();
+                const computerSelection = getComputerChoice();
 
-            if (humanChoice === computerChoice) {
-                resultMessage = "It is a tie";
-            } else if ((humanChoice === "rock" && computerChoice === "scissors") ||
-                (humanChoice === "paper" && computerChoice === "rock") ||
-                (humanChoice === "scissors" && computerChoice === "paper")) {
-                resultMessage = "You win! " + humanChoice + " beats " + computerChoice;
-                humanScore++;
-            } else {
-                resultMessage = "You lose! " + computerChoice + " beats " + humanChoice;
-                computerScore++;
+                if (!humanSelection) {
+                    console.log("Enter a valid choice");
+                    return;
+                }
+
+                let resultMessage = "";
+
+                if (humanSelection === computerSelection) {
+                    resultMessage = "It is a tie";
+                } else if ((humanSelection === "rock" && computerSelection === "scissors") ||
+                    (humanSelection === "paper" && computerSelection === "rock") ||
+                    (humanSelection === "scissors" && computerSelection === "paper")) {
+                    resultMessage = "You win! " + humanSelection + " beats " + computerSelection;
+                    humanScore++;
+                } else {
+                    resultMessage = "You lose! " + computerSelection + " beats " + humanSelection;
+                    computerScore++;
+                }
+                console.log(resultMessage);
+
             }
+
+            for (let counter = 0; counter < 5; counter++) {
+                playRound();
+            }
+
+            console.log("Final Scores:")
+            console.log("Human: " + humanScore);
+            console.log("Computer: " + computerScore);
 
         }
 
-        const humanSelection = getHumanChoice();
-        const computerSelection = getComputerChoice();
-
-        playRound(humanSelection, computerSelection);
+        playGame();
 
     </script>
 
